--- a/config/database.yml
+++ b/config/database.yml
@@ -3,19 +3,19 @@ development:
   encoding: unicode
   database: myapp_development
   pool: 5
-  username: myapp
+  username: movie_app
   password:
 test:
   adapter: postgresql
   encoding: unicode
   database: myapp_test
   pool: 5
-  username: myapp
+  username: movie_app
   password:
 production:
   adapter: postgresql
   encoding: unicode
   database: myapp_production
   pool: 5
-  username: myapp
+  username: movie_app
   password:
